Removed unnecessary padding at end of content. Discovered that the issue with mismatched heights is simply due to the iOS toolbar dynamically changing size, therefore 100vh is the dimension when the toolbar is hidden, meaning the page doesn't fit correctly into the viewport.

--- a/static/styles.css
+++ b/static/styles.css
@@ -173,7 +173,6 @@ footer,
 article,
 #blog-posts { 
     padding-inline: 3rem; /* Adds space either side of page content. */
-    padding-block-end: 3rem; /* Prevent footer overlapping content on iOS. */
 }
 
 h1,
